--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ApocalypseCalculator/Minilonk#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "nanoid": "^3.1.22",
     "sqlite3": "^5.0.2"
